Development Version
-------------------

Nothing yet.


Release 0.5.4 (Nov 28, 2025)
----------------------------

Enhancements

* Add support for Python 3.14.
* Add type annotations to top-level API functions and include py.typed marker
  for PEP 561 compliance, enabling type checking with mypy and other tools
  (issue756).
* Add pre-commit hook support. sqlparse can now be used as a pre-commit hook
  to automatically format SQL files. The CLI now supports multiple files and
  an `--in-place` flag for in-place editing (issue537).
* Add `ATTACH` and `DETACH` to PostgreSQL keywords (pr808).
* Add `INTERSECT` to close keywords in WHERE clause (pr820).
* Support `REGEXP BINARY` comparison operator (pr817).

Bug Fixes

* Add additional protection against denial of service attacks when parsing
  very large lists of tuples. This enhances the existing recursion protections
  with configurable limits for token processing to prevent DoS through
  algorithmic complexity attacks. The new limits (MAX_GROUPING_DEPTH=100,
  MAX_GROUPING_TOKENS=10000) can be adjusted or disabled (by setting to None)
  if needed for legitimate large SQL statements.
* Remove shebang from cli.py and remove executable flag (pr818).
* Fix strip_comments not removing all comments when input contains only
  comments (issue801, pr803 by stropysh).
* Fix splitting statements with IF EXISTS/IF NOT EXISTS inside BEGIN...END
  blocks (issue812).
* Fix splitting on semicolons inside BEGIN...END blocks (issue809).


Release 0.5.3 (Dez 10, 2024)
----------------------------

Bug Fixes

* This version introduces a more generalized handling of potential denial of
  service attack (DOS) due to recursion errors for deeply nested statements.
  Brought up and fixed by @living180. Thanks a lot!


Release 0.5.2 (Nov 14, 2024)
----------------------------

Bug Fixes

* EXTENSION is now recognized as a keyword (issue785).
* SQL hints are not removed when removing comments (issue262, by skryzh).

